<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="33.0dip"
	android:orientation="vertical">
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="0.5dip"
		android:background="@color/white"/>
	<LinearLayout 
		android:layout_width="match_parent"
		android:layout_height="32.0dip"
		android:orientation="horizontal">
		<TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="3"
	    	android:text="@string/data_name"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	    <LinearLayout 
	    	android:layout_width="0.5dip"
	    	android:layout_height="fill_parent"
	    	android:background="@color/white"/>
	    <TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="2.5"
	    	android:text="@string/data_new"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	    <LinearLayout 
	    	android:layout_width="0.5dip"
	    	android:layout_height="fill_parent"
	    	android:background="@color/white"/>
	    <TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="2.5"
	    	android:text="@string/data_open_today"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	    <LinearLayout 
	    	android:layout_width="0.5dip"
	    	android:layout_height="fill_parent"
	    	android:background="@color/white"/>
	    <TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="2.5"
	    	android:text="@string/data_close"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	    <LinearLayout 
	    	android:layout_width="0.5dip"
	    	android:layout_height="fill_parent"
	    	android:background="@color/white"/>
	    <TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="2.5"
	    	android:text="@string/data_up"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	    <LinearLayout 
	    	android:layout_width="0.5dip"
	    	android:layout_height="fill_parent"
	    	android:background="@color/white"/>
	    <TextView 
	    	android:layout_width="0dip"
	    	android:layout_height="fill_parent"
	    	android:layout_weight="2.5"
	    	android:text="@string/data_margin"
	    	android:textColor="@color/white"
	    	style="@style/data_financial_title_text"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="0.5dip"
		android:background="@color/white"/>
</LinearLayout>
