<?xml version="1.0" encoding="utf-8"?>
<!--  <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal"
    	android:background="@drawable/title_high_background" >
    <TextView  android:layout_width="0dip" android:layout_height="fill_parent"  style="@style/data_detail_title_text"
    		android:text="@string/data_name" android:layout_weight="5"/>
    <TextView  android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_buy" android:layout_weight="4"/>
    <TextView android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_sell" android:layout_weight="4"/>
    
    <TextView android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_high" android:layout_weight="4"/>
    <TextView android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_low" android:layout_weight="4"/>
    <TextView android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_up" android:layout_weight="4"/>
    <TextView android:layout_width="0dip" android:layout_height="fill_parent" style="@style/data_detail_title_text"
    		android:text="@string/data_percent" android:layout_weight="4"/>
    
</LinearLayout>-->
<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip" android:text="@string/data_name" android:textColor="#ffcccccc" android:gravity="center" android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="46.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_buy" android:textColor="#ffcccccc" android:gravity="center" android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="49.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_sell" android:textColor="#ffcccccc" android:gravity="center" android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="49.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_high" android:textColor="#ffcccccc" android:gravity="center"  android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="49.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_low"  android:textColor="#ffcccccc" android:gravity="center"  android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="49.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_up" android:textColor="#ffcccccc" android:gravity="center" android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="34.0" />
        <TextView android:textSize="12.0dip" android:text="@string/data_percent" android:textColor="#ffcccccc" android:gravity="center"  android:background="@drawable/textview_box" android:layout_width="0.0dip" android:layout_height="30.0dip" android:layout_weight="44.0" />
    </LinearLayout>
</LinearLayout>
