<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
    <include layout="@layout/app_title_bar"/>
	<LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
    	android:orientation="vertical"
    	android:background="@drawable/app_background">
    	<LinearLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:background="@drawable/title_high_background"
	    	android:orientation="horizontal">
	    	<TextView 
	    		android:id="@+id/txt_fast_info"
	    		android:layout_width="80.0dip"
	    		android:layout_height="35.0dip"
	    		android:layout_marginLeft="15.0dip"
	    		android:gravity="center"
	    		android:layout_gravity="center_vertical"
	    		android:text="@string/fast_info"
	    		android:textColor="@color/dark_orange"
	    		android:textSize="16.0sp"
	    		android:background="@drawable/title_btn_bg_orange"/>
	    	<TextView 
	    		android:id="@+id/txt_agency_comment"
	    		android:layout_width="80.0dip"
	    		android:layout_height="35.0dip"
	    		android:layout_marginLeft="15.0dip"
	    		android:gravity="center"
	    		android:layout_gravity="center_vertical"
	    		android:text="@string/agency_comment"
	    		android:textSize="16.0sp"
	    		android:textColor="@color/white"/>
	    	<TextView 
	    		android:id="@+id/txt_market_news"
	    		android:layout_width="80.0dip"
	    		android:layout_height="35.0dip"
	    		android:layout_marginLeft="15.0dip"
	    		android:gravity="center"
	    		android:layout_gravity="center_vertical"
	    		android:text="@string/fast_news"
	    		android:textSize="16.0sp"
	    		android:textColor="@color/white"/>
	    </LinearLayout>
		<LinearLayout 
	    	android:layout_width="fill_parent"
	    	android:layout_height="fill_parent"
	    	android:layout_margin="12.0dip">
	    	<include layout="@layout/app_refresh_layout"/>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
