<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include layout="@layout/app_title_bar"/>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:background="@drawable/app_background">
		<ImageView 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			android:background="@drawable/title_low_background"/>
		<com.innouni.south.widget.ReboundScrollView
	   		android:layout_width="fill_parent"
	   		android:layout_height="fill_parent"
	   		android:layout_margin="10.0dip"
	   		android:fadingEdge="none"
	   		android:scrollbars="none">
			<LinearLayout 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">
				<RelativeLayout 
	   				android:layout_width="fill_parent"
	   				android:layout_height="50.0dip"
	   				android:background="@drawable/list_middle_click">
	   				<TextView 
	   					android:id="@+id/txt_login_username"
	   					android:layout_width="wrap_content"
	   					android:layout_height="wrap_content"
	   					android:layout_centerVertical="true"
	   					android:layout_marginRight="15.0dip"
	   					android:text="@string/user_nick"
	   					android:ems="4"
	   					android:textColor="@color/black"
	   					android:textSize="18.0sp"/>
	   				<EditText 
	   					android:id="@+id/edit_login_username"
	   					android:layout_width="fill_parent"
	   					android:layout_height="match_parent"
	   					android:cursorVisible="true"
	   					android:layout_centerVertical="true"
	   					android:background="@color/white"
	   					android:textColor="@color/blue"
	   					android:imeOptions="actionNext"
	   					android:layout_toRightOf="@id/txt_login_username"/>
	   			</RelativeLayout>
	   			<RelativeLayout 
	   				android:layout_width="fill_parent"
	   				android:layout_height="50.0dip"
	   				android:background="@drawable/list_middle_click">
	   				<TextView 
	   					android:id="@+id/txt_login_username"
	   					android:layout_width="wrap_content"
	   					android:layout_height="wrap_content"
	   					android:layout_centerVertical="true"
	   					android:layout_marginRight="15.0dip"
	   					android:text="@string/user_pwd"
	   					android:ems="4"
	   					android:textColor="@color/black"
	   					android:textSize="18.0sp"/>
	   				<EditText 
	   					android:id="@+id/edit_login_pwd"
	   					android:layout_width="fill_parent"
	   					android:layout_height="match_parent"
	   					android:cursorVisible="true"
	   					android:layout_centerVertical="true"
	   					android:background="@color/white"
	   					android:textColor="@color/blue"
	   					android:password="true"
	   					android:imeOptions="actionDone"
	   					android:layout_toRightOf="@id/txt_login_username"/>
	   			</RelativeLayout>
	   			<LinearLayout 
	   				android:layout_width="fill_parent"
	   				android:layout_height="wrap_content"
	   				android:orientation="vertical"
	   				android:background="@color/white">
	   				<Button 
	   					android:id="@+id/btn_login"
	   					android:layout_width="fill_parent"
	   					android:layout_height="wrap_content"
	   					android:text="@string/login"
	   					android:textColor="@color/white"
	   					android:textSize="20.0sp"
	   					android:layout_marginLeft="10.0dip"
	   					android:layout_marginRight="10.0dip"
	   					android:layout_marginBottom="15.0dip"
	   					android:layout_marginTop="15.0dip"
	   					android:gravity="center"
	   					android:background="@drawable/send_btn_selector"/>
	   				<Button 
	   					android:id="@+id/btn_register"
	   					android:layout_width="fill_parent"
	   					android:layout_height="wrap_content"
	   					android:text="@string/register"
	   					android:textColor="@color/white"
	   					android:textSize="20.0sp"
	   					android:gravity="center"
	   					android:layout_marginLeft="10.0dip"
	   					android:layout_marginRight="10.0dip"
	   					android:layout_marginBottom="15.0dip"
	   					android:background="@drawable/test_update_btn_selector"/>
	   			<ImageView 
	   				android:layout_width="fill_parent"
	   				android:layout_height="wrap_content"
	   				android:background="@drawable/main_bg_line"/>
	   			</LinearLayout>
	   			<RelativeLayout 
	   				android:layout_width="fill_parent"
	   				android:layout_height="50.0dip"
	   				android:background="@drawable/list_middle_click">
	   				<Button
	   					android:id="@+id/btn_sina_weibo"
	   					android:layout_width="wrap_content"
	   					android:layout_height="wrap_content"
	   					android:layout_centerVertical="true"
	   					android:background="@color/white"
	   					android:text="@string/login_sina"
	   					android:textColor="@color/black"
	   					android:textSize="16.0sp"
	   					android:drawableLeft="@drawable/login_icon_sina"/>
	  				<Button
	   					android:id="@+id/btn_qq"
	   					android:layout_width="wrap_content"
	   					android:layout_height="wrap_content"
	   					android:layout_toRightOf="@id/btn_sina_weibo"
	   					android:layout_centerVertical="true"
	   					android:layout_marginLeft="10.0dip"
	   					android:background="@color/white"
	   					android:text="@string/login_qq"
	   					android:textColor="@color/black"
	   					android:textSize="16.0sp"
	   					android:drawableLeft="@drawable/login_icon_qq"/>
	   				<Button
	   					android:id="@+id/btn_get_pwd_back"
	   					android:layout_width="wrap_content"
	   					android:layout_height="wrap_content"
	   					android:layout_alignParentRight="true"
	   					android:layout_centerVertical="true"
	   					android:layout_marginRight="10.0dip"
	   					android:background="@color/white"
	   					android:textSize="16.0sp"
	   					android:text="@string/get_password_back"
	   					android:textColor="@color/blue"/>
	   			</RelativeLayout>
			</LinearLayout>
		</com.innouni.south.widget.ReboundScrollView>
	</LinearLayout>
</LinearLayout>