<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent">
    <include layout="@layout/app_title_bar"/>
    <LinearLayout 
	    android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@drawable/app_background">
	    <TextView 
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:paddingLeft="10.0dip"
	    	android:background="@drawable/title_high_background"
	    	android:gravity="center_vertical"
	    	android:text="@string/share_app_tip"
	    	android:textSize="15.0dip"
	    	android:textColor="@color/white"/>
	 	<com.innouni.south.widget.ReboundScrollView
	   		android:layout_width="fill_parent"
	   		android:layout_height="fill_parent"
	   		android:layout_margin="10.0dip"
	   		android:fadingEdge="none"
	   		android:scrollbars="none">
		    <LinearLayout 
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical">
		    	<RelativeLayout 
		    		android:id="@+id/lay_sina"
		    		android:layout_width="fill_parent"
		    		android:layout_height="50.0dip"
		    		android:background="@drawable/list_middle_click">
		    		<ImageView 
		    			android:id="@+id/image_sina"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_centerVertical="true"
		    			android:scaleType="fitXY"
		    			android:src="@drawable/icon_sina"/>
		    		<TextView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_toRightOf="@id/image_sina"
		    			android:layout_centerVertical="true"
		    			android:layout_marginLeft="5.0dip"
		    			android:text="@string/sina_weibo"
		    			android:textColor="@color/black"
		    			android:textSize="18.0sp"/>
		    		<ImageView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_alignParentRight="true"
		    			android:layout_marginRight="5.0dip"
		    			android:layout_centerVertical="true"
		    			android:src="@drawable/list_arrow_selector"/>
		    	</RelativeLayout>
		    	<RelativeLayout 
		    		android:id="@+id/lay_tencnet"
		    		android:layout_width="fill_parent"
		    		android:layout_height="50.0dip"
		    		android:background="@drawable/list_middle_click">
		    		<ImageView 
		    			android:id="@+id/image_tencnet"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_centerVertical="true"
		    			android:scaleType="fitXY"
		    			android:src="@drawable/icon_qq"/>
		    		<TextView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_toRightOf="@id/image_tencnet"
		    			android:layout_centerVertical="true"
		    			android:layout_marginLeft="5.0dip"
		    			android:text="@string/tencnet_weibo"
		    			android:textColor="@color/black"
		    			android:textSize="18.0sp"/>
		    		<ImageView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_alignParentRight="true"
		    			android:layout_marginRight="5.0dip"
		    			android:layout_centerVertical="true"
		    			android:src="@drawable/list_arrow_selector"/>
		    	</RelativeLayout>
		    	<RelativeLayout 
		    		android:id="@+id/lay_renn"
		    		android:layout_width="fill_parent"
		    		android:layout_height="50.0dip"
		    		android:background="@drawable/list_middle_click">
		    		<ImageView 
		    			android:id="@+id/image_renn"
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_centerVertical="true"
		    			android:scaleType="fitXY"
		    			android:src="@drawable/icon_rr"/>
		    		<TextView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_toRightOf="@id/image_renn"
		    			android:layout_centerVertical="true"
		    			android:layout_marginLeft="5.0dip"
		    			android:text="@string/renn"
		    			android:textColor="@color/black"
		    			android:textSize="18.0sp"/>
		    		<ImageView 
		    			android:layout_width="wrap_content"
		    			android:layout_height="wrap_content"
		    			android:layout_alignParentRight="true"
		    			android:layout_marginRight="5.0dip"
		    			android:layout_centerVertical="true"
		    			android:src="@drawable/list_arrow_selector"/>
		    	</RelativeLayout>
		    </LinearLayout>
		</com.innouni.south.widget.ReboundScrollView>
	</LinearLayout>
</LinearLayout>

